--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #=================mybatis相关配置===================#
 mybatis.jdbc.jar=F:/project/springboot-test/src/main/resources/mysql-connector-java-8.0.21.jar
 #mybatis扫描接口对应的xml文件
-mybatis.type-aliases-package=com.example.mapper
+mybatis.type-aliases-package=com.zr.mapper
 mybatis.mapper-locations=classpath*:mapper/*.xml
 
 #=================mysql相关配置===================#
