--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #=================mybatis相关配置===================#
-mybatis.jdbc.jar=F:/project/springboot-test/src/main/resources/mysql-connector-java-8.0.21.jar
+mybatis.jdbc.jar=E:/project/quantitative-trading/src/main/resources/mysql-connector-java-8.0.21.jar
 #mybatis扫描接口对应的xml文件
 mybatis.type-aliases-package=com.zr.mapper
 mybatis.mapper-locations=classpath*:mapper/*.xml
@@ -7,5 +7,5 @@ mybatis.mapper-locations=classpath*:mapper/*.xml
 #=================mysql相关配置===================#
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false&characterSetResults=utf8&autoReconnect=true&failOverReadOnly=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
