--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
 			<artifactId>spring-boot</artifactId>
 			<version>2.7.12</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -173,6 +178,7 @@
 					<include>**/*.yml</include>
 					<include>**/*.properties</include>
 					<include>**/*.xml</include>
+					<include>**/*.lua</include>
 				</includes>
 				<filtering>false</filtering>
 			</resource>
