--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
-#=================mybatis相关配置===================#
+#=================mybatis=================#
 mybatis.jdbc.jar=E:/project/quantitative-trading/src/main/resources/mysql-connector-java-8.0.21.jar
-#mybatis扫描接口对应的xml文件
 mybatis.type-aliases-package=com.zr.mapper
 mybatis.mapper-locations=classpath*:mapper/*.xml
 
-#=================mysql相关配置===================#
+#=================mysql===================#
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false&characterSetResults=utf8&autoReconnect=true&failOverReadOnly=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#=================redis===================#
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=redis
+spring.redis.database=0
+spring.redis.timeout=1800000
+spring.redis.lettuce.pool.max-active=20
+spring.redis.lettuce.pool.max-wait=-1
+spring.redis.lettuce.pool.max-idle=5
+spring.redis.lettuce.pool.min-idle=0
