--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ mybatis.type-aliases-package=com.zr.mapper
 mybatis.mapper-locations=classpath*:mapper/*.xml
 
 #=================mysql===================#
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false&characterSetResults=utf8&autoReconnect=true&failOverReadOnly=false
+spring.datasource.url=jdbc:mysql://localhost:3306/quantitative-trade?characterEncoding=utf8&useSSL=false&characterSetResults=utf8&autoReconnect=true&failOverReadOnly=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.sql.init.schema-locations=classpath:/sql/create_tables.sql
 
 #=================redis===================#
 spring.redis.host=localhost
