分库分表案例提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,49 @@ spring.redis.lettuce.pool.max-active=20
 spring.redis.lettuce.pool.max-wait=-1
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
+
+
+#=================spring Shardingsphere===================#
+# 数据源名称列表
+spring.shardingsphere.datasource.names=ds0,ds1
+
+# 主数据源配置
+spring.shardingsphere.datasource.ds0.type=com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds0.url=jdbc:mysql://localhost:3306/quantitative-trade?characterEncoding=utf8&useSSL=false&characterSetResults=utf8&autoReconnect=true&failOverReadOnly=false
+spring.shardingsphere.datasource.ds0.username=root
+spring.shardingsphere.datasource.ds0.password=root
+
+# 从数据源配置
+spring.shardingsphere.datasource.ds1.type=com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.ds1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds1.url=jdbc:mysql://localhost:3306/quantitative-trade1?characterEncoding=utf8&useSSL=false&characterSetResults=utf8&autoReconnect=true&failOverReadOnly=false
+spring.shardingsphere.datasource.ds1.username=root
+spring.shardingsphere.datasource.ds1.password=root
+
+# 读写分离配置
+#spring.shardingsphere.masterslave.name=ds
+#spring.shardingsphere.masterslave.load-balance-algorithm-type=round_robin
+#spring.shardingsphere.masterslave.master-data-source-name=ds0
+#spring.shardingsphere.masterslave.slave-data-source-names=ds1
+
+
+# ShardingSphere 属性配置
+spring.shardingsphere.props.sql.show=true
+spring.shardingsphere.props.sql.simple=false
+
+# 实际数据表节点
+spring.shardingsphere.sharding.tables.stock_base_info.actual-data-nodes=ds$->{0..1}.stock_base_info$->{0..2}
+
+# 分库策略（按 id 取模）
+spring.shardingsphere.sharding.tables.stock_base_info.database-strategy.inline.sharding-column=id
+spring.shardingsphere.sharding.tables.stock_base_info.database-strategy.inline.algorithm-expression=ds$->{id % 2}
+
+# 分表策略（按 id 取模）
+spring.shardingsphere.sharding.tables.stock_base_info.table-strategy.inline.sharding-column=id
+spring.shardingsphere.sharding.tables.stock_base_info.table-strategy.inline.algorithm-expression=stock_base_info$->{id % 3}
+
+
+logging.level.org.apache.shardingsphere=DEBUG
+logging.level.org.apache.shardingsphere.infra.config=DEBUG
+
